force-app/main/default/objects/Account/fields/CP_BillingCityCode__c.field-meta.xml
<CustomField>
    <fullName>CP_BillingCityCode__c</fullName>
    <description>Código de Ciudad del sistema de Cartera</description>
    <label>Código de Ciudad de Residencia</label>
    <length>10</length>
    <type>Text</type>
</CustomField>