force-app/main/default/objects/Account/fields/DSALES_ClienteCoppel__c.field-meta.xml
<CustomField>
    <fullName>DSALES_ClienteCoppel__c</fullName>
    <label># Cliente Coppel</label>
    <length>10</length>
    <type>Text</type>
</CustomField>