force-app/main/default/objects/Account/fields/DSALES_DeseaserContactado__c.field-meta.xml
<CustomField>
    <fullName>DSALES_DeseaserContactado__c</fullName>
    <defaultValue>true</defaultValue>
    <label>¿Desea ser contactado?</label>
    <type>Checkbox</type>
</CustomField>