force-app/main/default/objects/Account/fields/DSALES_Fecha_alta__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Fecha_alta__c</fullName>
    <description>Campo que indica la fecha de alta del cliente.</description>
    <label>Fecha de alta</label>
    <type>Date</type>
</CustomField>