force-app/main/default/objects/Account/fields/DSALES_Ingreso_mensual__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Ingreso_mensual__c</fullName>
    <description>Campo que mostrará el ingreso mensual del cliente.</description>
    <label>Ingreso mensual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>