force-app/main/default/objects/Account/fields/DSALES_Puesto_trabajo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Puesto_trabajo__c</fullName>
    <description>Campo que muestra el puesto de trabajo del cliente.</description>
    <label>Puesto de trabajo</label>
    <length>40</length>
    <type>Text</type>
</CustomField>