force-app/main/default/objects/Account/fields/sumar__c.field-meta.xml
<CustomField>
    <fullName>sumar__c</fullName>
    <label>sumar</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Cerrada ganada</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>