force-app/main/default/objects/Account/fields/Tipo_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Cliente__c</fullName>
    <formula>IF( CP_WalletCustomerNumberTxt__c = &apos;&apos;, &apos;Contado&apos;, &apos;Crédito Coppel&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Cliente</label>
    <type>Text</type>
</CustomField>