force-app/main/default/objects/Account/listViews/DSales_Nuevos_de_esta_semana.listView-meta.xml
<ListView>
    <fullName>DSales_Nuevos_de_esta_semana</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>FinServ__ClientCategory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Nuevos de esta semana</label>
    <sharedTo>
        <role>DSALES_Admin_GEX</role>
        <role>DSALES_Admin_SM</role>
    </sharedTo>
</ListView>