force-app/main/default/objects/Account/listViews/DSales_Todos_los_clientes.listView-meta.xml
<ListView>
    <fullName>DSales_Todos_los_clientes</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>FinServ__Status__c</columns>
    <columns>PC_PHONE3</columns>
    <columns>CP_CRMCustomerNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los clientes</label>
    <sharedTo>
        <role>DSALES_Admin_GEX</role>
        <role>DSALES_Admin_SM</role>
    </sharedTo>
</ListView>