force-app/main/default/objects/Account/listViews/Mis_Clientes.listView-meta.xml
<ListView>
    <fullName>Mis_Clientes</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>FinServ__ClientCategory__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mis Clientes</label>
    <sharedTo>
        <role>DSALES_Admin_GEX</role>
        <role>DSALES_Admin_SM</role>
    </sharedTo>
</ListView>